fix for 12 task

--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -74,24 +74,27 @@
 			<div class="form-group">
 			<label class=" col-xs-3">Тип работ</label>
 			<div class="col-xs-5">
-				<%= f.select :type_requistion, [['АВАРИЯ (ЦО/ГВС/ХВС/Канализация)', 'Э'],
-											['РЕМОНТ (ЦО/ГВС/ХВС/Канализация)', 'Г'],
-											['АВАРИЯ (ЭЛЕКТРОСЕТИ)', 'X'],
+				<%= f.select :type_requistion, [['Электроснабжение	', 'Э'],
+											['Слаботочка', 'C'],
+											['Бассеины', 'Б'],
 											['РЕМОНТ (ЭЛЕКТРОСЕТИ)', 'К'],
-											['АВАРИЯ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'О'],
-											['РЕМОНТ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'П'],
-											['АВАРИЯ СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'У'],
-											['ТО СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'В'],
-											['ТО ВЕНТИЛЯЦИИ/ВОЗД.ОТОПЛЕНИЯ', 'C'],
-											['ТО АУУ (ОТОПЛЕНИЕ)', 'Д'],
-											['ТО СИСТЕМ КОНДИЦИОНИРОВАНИЯ', 'А'],
-											['ТО ВОДОПОДГОТОВКИ БАССЕЙНОВ', 'Д'],
-											['ОПРЕССОВКА ТРУБОПРОВОДОВ', 'А'],
-											['ГАРАНТИЙНОЕ ОБСЛУЖИВАНИЕ', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control", required: ""  }  %>
+											['Вентиляция и воздушное отопление', 'О'],
+											['Пожаротушение', 'П'],
+											['Роснефть', 'Р'],
+											['Водоснабжение, канализация и водяное отоплание', 'В'],], { :prompt => "Выберите из списка" }, { :class => "form-control", required: ""  }  %>
 			</div>
 			</div>
 		</div>
 
+		<div class="row">
+			<div class="form-group">
+				<%= f.label :'Категория заявки:', class: "col-md-3 control-label" %>
+				<div class="col-md-5">
+					<%= f.select :category, [['Авария', 1], ['Неисправность', 2], ['Коррекция режима работы', 3], ['Иные работы', 4]], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
+
+				</div>
+			</div>
+		</div>
 
 		<div class="row" id="info" style="display:none">
 			<div class="form-group" >
