--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Заявка') %>
 <div class="container">
   <div class="row">
-<div class="col-xs-6 showtable">
+<div class="col-xs-12 col-sm-6 col-md-4 showtable">
   <table class="table table-bordered table-striped">
   <tr>
     <th>Объект</th>
