--- a/app/views/bosses/edit.html.erb
+++ b/app/views/bosses/edit.html.erb
@@ -1,9 +1,7 @@
 <% provide(:title, 'Редактирование начальника') %>
 <div class="container">
 <div class="row">
-	<div class="col-xs-4">
-	</div>
-	<div class="col-xs-4">
+	<div class="col-xs-4 col-xs-offset-4">
 		<h1>Редактирование</h1>
 
 		<%= form_for(@boss, :html => {:class => "form-vertical center"}) do |f| %>
@@ -30,21 +28,18 @@
 			<label>Начало отпуска</label>
 			<%
 			b_rest = @boss.begin_of_rest.to_date.to_formatted_s(:day_month_year) if @boss.begin_of_rest %>
-			<%= date_field_tag "boss[begin_of_rest]", b_rest, class: "form-control" %>	
+			<%= date_field_tag "boss[begin_of_rest]", b_rest, class: "form-control" %>
 		</div>
 		<div class="form-group">
 			<label>Конец отпуска</label>
 			<%
 			e_rest = @boss.end_of_rest.to_date.to_formatted_s(:day_month_year) if @boss.end_of_rest %>
-			<%= date_field_tag "boss[end_of_rest]", e_rest, class: "form-control" %>	
+			<%= date_field_tag "boss[end_of_rest]", e_rest, class: "form-control" %>
 		</div>
 
 		<br>
 			<%= f.submit "Сохранить", class: "btn" %>
-		<br>
 		<% end %>
 
-	</div>
-	<div class="col-md-4">
 	</div>
 </div>
