--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<h1 style="text-align:center">Все объекты</h1>
-			<%= link_to "Новый объект", new_building_path, class: "btn"%> 
+			<%= link_to "Новый объект", new_building_path, class: "btn"%>
 			<table id="buildings" class="table table-bordered table-striped">
 				<thead>
 				<tr>
@@ -20,16 +20,21 @@
 					<% @buildings.each do |b| %>
 					<tr>
 						<td><%= b.id %></td>
-						<th><%= b.name %> </th>
+						<th><%= b.name_safe %> </th>
 						<td><%= link_to b.arrival_address,  building_path(b) %></td>
-						<td><%= b.contact_name %></td>
-						<td><%= b.contact_phone %></td>						
-						<td><% b.contracts.each do |contract| %><%=link_to contract.name_contract, contract_path(contract) %> <%=contract.description%><br><% end %></td>
+						<td><%= b.contact_name_safe %></td>
+						<td><%= b.contact_phone_safe %></td>
+						<td>
+							<% b.contracts.each do |c| %>
+								<%= link_to c.name_contract, contract_path(c) %>
+								<%= c.description %><br>
+							<% end %>
+						</td>
 						<td><%= link_to 'Заявки', {:controller => :requistions, :action => :index, :position =>2, :value => b.id}, {:method => :get} %></td>
 					</tr>
 					<% end %>
 				</tbody>
 			</table>
 		</div>
-	</div>	  
+	</div>
 </div>
