--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,10 +1,6 @@
 <% provide(:title, 'Контракты') %>
 <h1>Контракты</h1>
 
-	<div class = "row">
-
-	</div>
-
 <script type="text/javascript">
 jQuery(document).ready(function() {
 	 $('#contracts').dataTable({
@@ -29,7 +25,6 @@ jQuery(document).ready(function() {
 	<thead>
 		<tr>
 			<th>Номер</th>
-			<th>Наименование объекта</th>
 			<th>Здания</th>
 			<th>Описание</th>
 			<th>Комментарий</th>
@@ -39,26 +34,22 @@ jQuery(document).ready(function() {
 		</tr>
 	</thead>
     <tbody>
-		<% @contracts.each do |contract| %>
+		<% @contracts.each do |c| %>
 		<tr>
-			<td > <%= link_to contract.name_contract, contract_path(contract) %></td>
-	    <td id = "company">
-	    	<%#= contract.buildings.first.name if  contract.buildings.first %>
-	    </td>
+			<td > <%= link_to c.name_contract, contract_path(c) %></td>
 	    <td id = "building">
-    		<% contract.buildings.each do |b| %>
-    		<li><%= link_to b.arrival_address, building_path(b) %> </li>
+    		<% c.buildings.each do |b| %>
+    			<li>
+    				<%= link_to b.arrival_address, building_path(b) %>
+    			</li>
     		<% end %>
 	    </td>
-    	<td id = "description"> <%= contract.description %></td>
-    	<td id = "comment"> <%= contract.comment %></td>
-    	<td id = "begin_time">
-    		<%= contract.begin_time.strftime("%d.%m.%Y") if contract.begin_time %>
-    	</td>
-	    <td id = "end_time">
-	    	<%= contract.end_time.strftime("%d.%m.%Y") if contract.end_time %></td>
+    	<td id = "description"> <%= c.description %></td>
+    	<td id = "comment"> <%= c.comment %></td>
+    	<td id = "begin_time"><%= c.begin_time_safe %></td>
+	    <td id = "end_time"><%= c.end_time_safe %></td>
 			<td>
-				<%= link_to edit_contract_path(contract) do %>
+				<%= link_to edit_contract_path(c) do %>
 	    		<span class="glyphicon glyphicon-pencil " ></span>
 	    	<% end %>
 	    </td>
@@ -70,14 +61,9 @@ jQuery(document).ready(function() {
 </div>
 
 <br>
-
 <br>
+
 <div class="container">
-
-
-
-
-
 		<div class = "row">
 				<h3>Импортировать контракты</h3>
 				<div class="col-md-6">
