--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,9 +1,7 @@
 <div class="container">
 <div class="row">
-	<div class="col-md-4">
-	</div>
-	<div class="col-md-4">
-<h1>Сброс пароля</h1>
+	<div class="col-md-4 col-md-offset-4">
+	<h1>Сброс пароля</h1>
 
 	<%= form_for(:password_reset, url: password_resets_path, html: {:class => "form-vertical center"}) do |f| %>
 		<div class="form-group">
@@ -12,7 +10,5 @@
 		</div>
 		<%= f.submit "Сменить парль", class: "btn" %>
 	<% end %>
-</div>
-	<div class="col-md-4">
 	</div>
 </div>
