--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -7,28 +7,28 @@
 			<label class=" col-md-3">Название объекта</label>
 			<div class="col-md-5">
 			<% @building.name = nil %>
-			<%= f.text_field :name, :placeholder = "Введите название объекта", class: "form-control"%>
+			<%= f.text_field :name, placeholder: "Введите название объекта", class: "form-control" %>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class=" col-md-3">Адрес</label>
 			<div class="col-md-5">
-			<%= f.text_field :arrival_address, :placeholder => "Введите адрес объекта", class: "form-control", required: "" %>
+			<%= f.text_field :arrival_address, placeholder: "Введите адрес объекта", class: "form-control", required: "" %>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class=" col-md-3">Ф.И.О контактого лица</label>
 			<div class="col-md-5">
-			<%= f.text_field :contact_name, :placeholder => "Введите Ф.И.О контактого лица", class: "form-control"%>
+			<%= f.text_field :contact_name, placeholder: "Введите Ф.И.О контактого лица", class: "form-control"%>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class=" col-md-3">Телефон контактного лица</label>
 			<div class="col-md-5">
-			<%= f.text_field :contact_phone, :placeholder => "Введите телефон контактого лица", class: "form-control"%>
+			<%= f.text_field :contact_phone, placeholder: "Введите телефон контактого лица", class: "form-control phonemask"%>
 			</div>
 		</div>
 
