--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,12 @@
  *= require jquery.datetimepicker
  */
 
-
+/* Календарь для прибытий*/
+.arrivals-calendar {
+  padding: 10px;
+  margin-top: 30px;
+}
+/* конеце каленадря для прибытий*/
 .hidden{
     display: none;
 }
